--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ html, body {
 /* Hero section */
 .hero-section {
   min-height: 80vh;
-  background-image: url('assets/flat-lay.jpg');
+  background-image: url("assets/background.png"), url("assets/background.svg");
   background-size: cover;
   background-position: center;
   display: flex;
