chore: standardize image markup site-wide
- Add width/height to all logo <img> tags (splash + header) across all 7 pages
- Add class="img-responsive" to offer card images on homepage
- Add .img-responsive utility class to style.css

--- a/style.css
+++ b/style.css
@@ -875,7 +875,17 @@ img {
 }
 
 /* ========================================================================
-   16. Responsive
+   16a. Image Cleanup & Standardization
+   ======================================================================== */
+
+.img-responsive {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+/* ========================================================================
+   16b. Responsive
    ======================================================================== */
 
 @media (max-width: 900px) {
